# OpenPNGStudio

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.0bsd  LICENSE.bsd-2-clause  README.md  build.bat  build.c3  build.sh  configure  deps.in  dev.lowbytefox.OpenPNGStudio.desktop  dev.lowbytefox.OpenPNGStudio.yml  install.sh  meson.build  project.json  raylib_config.h  setup_mingw.sh  x86_64-w64-mingw32.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: canary.yml
assets/: CREDIT.txt
assets/Oxy/: CREDIT.txt  README.txt
assets/icons/: check.png~
assets/shaders/: outline.glsl
build-files/: cmake.c3  lua.c3  unuv.c3
data/: dev.lowbytefox.OpenPNGStudio.desktop  dev.lowbytefox.OpenPNGStudio.metainfo.xml  win.rc
include/: animations.h  c3.h  console.h  context.h  editor.h  filedialog.h  gif_config.h  layermgr.h  line_edit.h  lua_ctx.h  mask.h  messagebox.h  microphone.h  nk.h  pathbuf.h  str.h
include/core/: icon_db.h  mask.h  microphone.h  nk.h  pathbuf.h  str.h
include/layer/: animated_properties.h  layer.h  manager.h  properties.h  state.h
include/model/: model.h
include/ui/: filedialog.h  line_edit.h  messagebox.h  panel.h  window.h
include/work/: queue.h  scheduler.h  work.h
lib/nk.c3l/: manifest.json  nk.c3i
lib/novacrash.c3l/: manifest.json  novacrash.c3i
lib/novacrash.c3l/src/: options.c3  setup.c3  trace.c3  ui.c3
lib/raygui.c3l/: manifest.json  raygui.c3i
lib/raylib.c3l/: manifest.json  raylib.c3i
lib/sqlite3.c3l/: manifest.json  sqlite3.c3i
lib/unuv.c3l/: manifest.json  unuv.c3i
licenses/: LICENSE.libunuv  LICENSE.miniaudio  LICENSE.tomlc99  LICENSE.zstd  README.txt
lua/: rt.lua
lua/ops@log/: init.lua
m4/: README.txt  queue.m4
patch/: src_raylib_gif_add_delays.diff
ports/: README.txt
ports/freebsd/openpngstudio/: Makefile  distinfo  pkg-descr  pkg-plist
ports/freebsd/openpngstudio/files/: patch-src_main.c
ports/openbsd/openpngstudio/: Makefile
ports/openbsd/openpngstudio/patches/: patch-src_main_c
ports/openbsd/openpngstudio/pkg/: PLIST
src/: animation.c3  console.c  console.c3  context.c  context.c3  editor.c  filedialog.c  gif_config.c  icon_db.c  image.c3  layer.c3  layermgr.c  line_edit.c  lua_ctx.c  main.c  main.c3  messagebox.c  miniaudio.c  nuklear.c  outline.c3  pathbuf.c  raygui.c  scene.c3  str.c  wrappers.c
src/animation/: easings.c3  fade.c3  manager.c3  shake.c3  spinner.c3
src/c/: console.c  context.c  editor.c  lua_ctx.c  main.c
src/c/wrappers/: nuklear.c
src/c3/: animated_layer.c3  animation.c3  layer.c3  main.c3  model.c3  static_layer.c3  style.c3
src/c3/animation/: fade.c3  manager.c3  shake.c3  spinner.c3
src/c3/core/: icondb.c3  mask.c3  model.c3
src/c3/layer/: animated.c3  manager.c3  static.c3  static_common.c3
src/c3/opng/: SPEC.md
src/c3/ui/: crash.c3  filedialog.c3  icondb.c3  line_edit.c3  messagebox.c3  style.c3  window.c3
src/core/: animation.c3  avif_loader.c  brain_damage.c  image.c3  layer.c3  loader.c3  mask.c  mask.c3  microphone.c  microphone.c3  model.c3  whereami.c3
src/layer/: animated.c3  config.c3  group.c3  layer.c  manager.c3  static.c3  static_common.c3
src/loaders/: avif.c  jpeg_xl.cpp  loader.c3  webp.c
src/lua/: logger.c
src/model/: libarchivent.c  load.c  model.c  write.c
src/opng/: SPEC.md  example.opng  main.c3  opng.magic  reader.c3  stream.c3  types.c3  writer.c3
src/opng/example/: conf.json  logo.qoi  root.json
src/opng/example/animations/: logo.json
src/opng/example/layers/: logo.json
src/opng/example/nested/: root.json
src/opng/example/nested/deeply/: logo.json  root.json
src/opng/subcmds/: dump.c3  info.c3  list.c3  pack.c3
src/ui/: colorpicker.c3  combo.c3  crash.c3  editor.c3  filedialog.c3  icondb.c3  line_edit.c3  messagebox.c  messagebox.c3  panel.c3  style.c3  window.c  windows_v2.c3  wm.c3
src/work/: queue.c  scheduler.c  work.c
src/wrappers/: miniaudio.c  nuklear.c
subprojects/: libavif.wrap  libjxl.wrap  libressl.wrap  libunuv.wrap  libuv.wrap  mman-win32.wrap  raylib.wrap  wolfssl.wrap
subprojects/packagefiles/: libavif-remove-dummy.patch  libressl.diff
templates/: animated.toml  manifest.toml  mod.lua  non_animated.toml
test/opng/: reader_basic.c3  reader_images.c3  test_common.c3  writer_basic.c3  writer_images.c3
